# fastapi_best_architecture

./: .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  HOT_RELOAD_IMPLEMENTATION.md  LICENSE  README.md  README.uz.md  README.zh-CN.md  README_zh.md  backend.dockerfile  celery.dockerfile  docker-compose.yml  docker_conf.py  gunicorn.conf.py  nginx.conf  pre-commit.sh  pyproject.toml  requirements.txt  supervisor.conf  translate.py
backend/: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  __init__.py  alembic.ini  backend.dockerfile  celery-start.sh  celery.dockerfile  cli.py  conftest.py  fastapi_server-start.sh  main.py  pre_start.sh  pyproject.toml  requirements.txt  run.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 2024-12-12_15-27_f24a35f7df40_.py
backend/app/: .env.example  __init__.py  alembic.ini  celery-start.sh  init_test_data.py  main.py  router.py  tasks.py  worker.sh
backend/app/admin/: conf.py
backend/app/alembic/: env.py
backend/app/api/: jwt.py  routers.py
backend/app/common/: casbin_rbac.py  celery.py  enums.py  jwt.py  log.py  pagination.py  permission.py  rbac.py  redis.py  task.py
backend/app/core/: celery.py  conf.py  path_conf.py  rbac_model.conf  registrar.py
backend/app/crud/: base.py  crud_api.py  crud_casbin.py  crud_dept.py  crud_dict_data.py  crud_dict_type.py  crud_login_log.py  crud_menu.py  crud_opera_log.py  crud_role.py  crud_user.py  crud_user_social.py
backend/app/database/: base_class.py  db_mysql.py
backend/app/generator/: README.md  conf.py
backend/app/middleware/: access_middle.py  access_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py
backend/app/models/: __init__.py  base.py  sys_api.py  sys_casbin_rule.py  sys_dept.py  sys_dict_data.py  sys_dict_type.py  sys_login_log.py  sys_menu.py  sys_oauth2.py  sys_opera_log.py  sys_role.py  sys_role_menu.py  sys_social_user.py  sys_user.py  sys_user_oauth2.py  sys_user_role.py  sys_user_social.py  user.py
backend/app/routers/: enter.py
backend/app/schemas/: api.py  base.py  casbin_rule.py  dept.py  dict_data.py  dict_type.py  login_log.py  menu.py  opera_log.py  role.py  task.py  token.py  user.py  user_social.py
backend/app/services/: api_service.py  auth_service.py  casbin_service.py  dept_service.py  dict_data_service.py  dict_type_service.py  github_service.py  login_log_service.py  menu_service.py  opera_log_service.py  role_service.py  task_service.py  user_service.py
backend/app/task/: README.md  __init__.py  actions.py  celery.py  conf.py  database.py  enums.py  session.py  tasks.py
backend/app/test/: conftest.py  test_auth.py
backend/app/tests/: conftest.py  init_test_data.py  test_auth.py  test_user.py
backend/app/utils/: build_tree.py  data_factory.py  datetime.py  demo_site.py  encoders.py  encoding_tree.py  encrypt.py  format_string.py  generate_string.py  health_check.py  location_parse.py  openapi.py  pydantic_as_form.py  re_verify.py  redis_info.py  request_parse.py  send_email.py  serializers.py  server_info.py  timezone.py
backend/common/: context.py  dataclasses.py  enums.py  i18n.py  jwt.py  lifespan.py  log.py  model.py  pagination.py  queue.py  rbac.py  schema.py  socket.py
backend/common/cache/: decorator.py  local.py  pubsub.py  warmup.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/i18n/: README.md  __init__.py  debug_i18n.py  manager.py  middleware.py  run_example.py  test_i18n.py  usage_example.py
backend/common/msd/: crud.py
backend/common/observability/: otel.py  prometheus.py  prometheus_queue.py  prometheus_sqlalchemy.py
backend/common/prometheus/: instruments.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py  permission.py  rbac.py
backend/common/socketio/: __init__.py  actions.py  server.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db.py  db_mysql.py  db_redis.py  redis.py
backend/langs/: zh-CN.yml
backend/locale/: en-US.json  zh-CN.yml
backend/locales/: loader.py
backend/middleware/: Request_Response_Middleware.py  access_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  request_info.py  state_middleware.py
backend/plugin/: README.md  conf.toml  config_loader.py  core.py  errors.py  installer.py  patching.py  plugin.py  requirements.py  settings_source.py  tools.py  validator.py
backend/plugin/ad_auth/: plugin.toml
backend/plugin/aliyun_oss/: plugin.toml
backend/plugin/api_testing/: API_DOCUMENTATION.md  README.md  __init__.py  plugin.toml  requirements.txt
backend/plugin/casbin/: conf.py  plugin.toml  requirements.txt
backend/plugin/code_generator/: README.md  conf.py  enums.py  path_conf.py  plugin.toml
backend/plugin/config/: README.md  conf.py  enums.py  plugin.toml
backend/plugin/dict/: README.md  plugin.toml
backend/plugin/email/: .env.example  README.md  plugin.toml
backend/plugin/notice/: README.md  enums.py  plugin.toml
backend/plugin/oauth2/: .env.example  README.md  enums.py  plugin.toml  requirements.txt  utils.py
backend/plugin/sms/: README.md  __init__.py  plugin.toml  requirements.txt
backend/scripts/: export.sh  format.sh  init_data.py  init_plugin.py  lint.sh  lock.sh  pdm_export.sh
backend/sql/: create_tables.sql  init_pytest_data.sql  init_test_data.sql  init_test_data_pg.sql
backend/static/: ws.html
backend/tests/: test_lifespan_plugin_order.py
backend/utils/: SQLAlchemy_log.py  _await.py  build_tree.py  console.py  demo_site.py  dynamic_config.py  dynamic_import.py  encrypt.py  file_ops.py  format.py  gen_template.py  get_templates.py  health_check.py  import_parse.py  json_control.py  limiter.py  locks.py  openapi.py  otel.py  pattern_validate.py  performance.py  re_verify.py  redis_info.py  reload_lock.py  request_parse.py  serializers.py  server_info.py  snowflake.py  sql_parser.py  timezone.py  trace_id.py  type_conversion.py
(+602 files in other folders)
