[project]
name = "fastapi_best_architecture"
description = """
A RBAC (Role-Based Access Control) permission control system built on FastAPI, featuring a unique pseudo-three-tier
architecture design, with built-in basic implementation of fastapi admin as a template library, free and open-source.
"""
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ['version']
dependencies = [
    "alembic>=1.17.2",
    "asgiref>=3.11.0",
    "asyncmy>=0.2.10",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cappa>=0.30.4",
    "celery>=5.6.0",
    # When celery version < 6.0.0
    # https://github.com/celery/celery/issues/7874
    "celery-aio-pool>=0.1.0rc8",
    "cryptography>=46.0.3",
    "dulwich>=0.24.10",
    "fast-captcha>=0.3.2",
    "fastapi-limiter>=0.1.6",
    "fastapi-pagination>=0.15.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.123.5",
    "flower>=2.0.1",
    "gevent>=25.9.1",
    "granian>=2.6.0",
    "ip2loc>=1.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "msgspec>=0.20.0",
    "psutil>=7.1.3",
    # https://github.com/fastapi-practices/fastapi_best_architecture/issues/887
    "psycopg[binary]==3.2.10",
    "pwdlib>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-jose>=3.5.0",
    "python-socketio>=5.15.0",
    "redis[hiredis]>=7.1.0",
    "rtoml>=0.13.0",
    "sqlalchemy-crud-plus>=1.13.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlparse>=0.5.4",
    "starlette-context>=0.4.0",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-sugar>=1.1.1",
]
lint = [
    "prek>=0.2.19",
]
server = [
    "aio-pika>=9.5.8",
    "wait-for-it>=2.3.0",
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev", "lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.version]
path = "backend/__init__.py"

[project.scripts]
fba = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
