[project]
name = "fastapi_best_architecture"
version = "0.0.1"
description = """
A RBAC (Role-Based Access Control) permission control system built on FastAPI, featuring a unique pseudo-three-tier
architecture design, with built-in basic implementation of fastapi admin as a template library, free and open-source.
"""
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "alembic>=1.13.0",
    "asgiref>=3.8.0",
    "asyncmy==0.2.9",
    "bcrypt==4.0.1",
    "casbin==1.34.0",
    "casbin_async_sqlalchemy_adapter==1.4.0",
    "celery==5.3.6",
    "cryptography==41.0.7",
    "fast-captcha==0.3.2",
    "fastapi[all]==0.111.0",
    "fastapi-limiter==0.1.6",
    "fastapi-pagination==0.12.13",
    "gunicorn==21.2.0",
    "httpx==0.25.2",
    "itsdangerous==2.1.2",
    "loguru==0.7.2",
    "msgspec==0.18.5",
    "passlib==1.7.4",
    "path==15.1.2",
    "phonenumbers==8.13.27",
    "psutil==5.9.6",
    "pydantic==2.9.1",
    "pytest==7.2.2",
    "pytest-pretty==1.2.0",
    "python-jose==3.3.0",
    "redis[hiredis]==5.1.0",
    "SQLAlchemy==2.0.30",
    "user-agents==2.2.0",
    "uvicorn[standard]==0.29.0",
    "XdbSearchIP==1.0.2",
    "fastapi_oauth20>=0.0.1a2",
    "flower==2.0.1",
    "sqlalchemy-crud-plus==1.5.0",
    "jinja2==3.1.4",
    "aiofiles==24.1.0",
    # When celery version < 6.0.0
    # https://github.com/celery/celery/issues/7874
    "celery-aio-pool==0.1.0rc6",
    "asgi-correlation-id>=4.3.3",
    "python-socketio[asyncio]>=5.11.4",
]

[dependency-groups]
lint = [
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]
server = [
    "supervisor>=4.2.5",
    "wait-for-it>=2.2.2",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ['lint']
